# tp-c-1iz

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmd/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/input/: CMakeLists.txt  input.c  input.h
src/menu/: CMakeLists.txt
src/storage-device/: CMakeLists.txt  storage-device-struct.h  storage-device.c  storage-device.h
tests/: CMakeLists.txt  tests.cpp
